[package]
name = "pakr-signals"
description = "A set of functions to wrap Linux' sigset_t functionality and to do a rudimentary signals managemet."
version = "1.0.0"
authors = ["Pawel Kraszewski <pawel@kraszewscy.net>"]
edition = "2018"
license = "BSD-2-Clause"
keywords = ["linux", "signals", "sigset_t"]
categories = ["api-bindings", "os::linux-apis"]
publish = ["crates.io"]
repository = "https://github.com/p-kraszewski/pakr-signals"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "^0.2"
